--- a/cause_connect.laravel/.env
+++ b/cause_connect.laravel/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:qPQUOT9TFntNL4ZuuR5mTpvWnz0wVTu/UahYboWXQOA=
 APP_DEBUG=true
-APP_URL=http://172.16.3.136:8000
+APP_URL=http://172.16.3.135:8000
 
 
 LOG_CHANNEL=stack
@@ -12,8 +12,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cause_connect
-DB_USERNAME=sample_user
+DB_DATABASE=cause_connect_laravel
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -57,5 +57,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-VITE_API_BASE_URL=http://172.16.3.136:8000/api
