--- a/cause_connect.laravel/.env
+++ b/cause_connect.laravel/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:qPQUOT9TFntNL4ZuuR5mTpvWnz0wVTu/UahYboWXQOA=
 APP_DEBUG=true
-APP_URL=http://172.16.3.135:8000
+APP_URL=http://172.16.3.136:8000
 
 
 LOG_CHANNEL=stack
@@ -12,8 +12,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cause_connect_laravel
-DB_USERNAME=root
+DB_DATABASE=cause_connect
+DB_USERNAME=sample_user
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
